UI: hide scrollbar in sidebar and fix active member bug on route /

--- a/web/src/MemberList.css
+++ b/web/src/MemberList.css
@@ -46,6 +46,14 @@
   .Content {
     flex: 1;
     overflow-y: auto;
+    
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
   }
 
   .TeamSection {
